@@ -17,6 +17,7 @@ import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Condition;
 import org.hl7.fhir.r4.model.Patient;
 import org.miracum.streams.ume.obdstofhir.FhirProperties;
+import org.miracum.streams.ume.obdstofhir.WriteGroupedObdsToKafkaConfig;
 import org.miracum.streams.ume.obdstofhir.mapper.ObdsToFhirMapper;
 import org.miracum.streams.ume.obdstofhir.mapper.mii.ObdsToFhirBundleMapper;
 import org.miracum.streams.ume.obdstofhir.model.Meldeanlass;
@@ -25,6 +26,8 @@ import org.miracum.streams.ume.obdstofhir.model.MeldungExportV3;
 import org.miracum.streams.ume.obdstofhir.model.ObdsOrAdt;
 import org.miracum.streams.ume.obdstofhir.serde.MeldungExportListV3Serde;
 import org.miracum.streams.ume.obdstofhir.serde.MeldungExportV3Serde;
+import org.miracum.streams.ume.obdstofhir.serde.Obdsv3Deserializer;
+import org.miracum.streams.ume.obdstofhir.serde.Obdsv3Serializer;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -44,13 +47,17 @@ public class Obdsv3Processor extends ObdsToFhirMapper {
 
   private final ObdsMapper obdsMapper;
 
+  private final WriteGroupedObdsToKafkaConfig writeGroupedObdsToKafkaConfig;
+
   protected Obdsv3Processor(
       FhirProperties fhirProperties,
       ObdsToFhirBundleMapper obdsToFhirBundleMapper,
-      ObdsMapper obdsMapper) {
+      ObdsMapper obdsMapper,
+      WriteGroupedObdsToKafkaConfig writeGroupedObdsToKafkaConfig) {
     super(fhirProperties);
     this.obdsToFhirBundleMapper = obdsToFhirBundleMapper;
     this.obdsMapper = obdsMapper;
+    this.writeGroupedObdsToKafkaConfig = writeGroupedObdsToKafkaConfig;
   }
 
   @Bean
@@ -69,23 +76,49 @@ public class Obdsv3Processor extends ObdsToFhirMapper {
                 return meldung;
               });
 
-      return mapped
-          .groupBy(
-              (key, meldung) -> KeyValue.pair(getPatIdFromMeldung(meldung), meldung),
-              Grouped.with(Serdes.String(), new MeldungExportV3Serde()))
-          .aggregate(
-              MeldungExportListV3::new,
-              (key, meldung, aggregate) -> {
-                aggregate.addElement(meldung);
-                return retainLatestVersionOnly(aggregate);
-              },
-              (key, meldung, aggregate) -> {
-                aggregate.removeElement(meldung);
-                return retainLatestVersionOnly(aggregate);
-              },
-              Materialized.with(Serdes.String(), new MeldungExportListV3Serde()))
-          .toStream()
-          .mapValues(this::groupByTumorId)
+      var stream =
+          mapped
+              .groupBy(
+                  (key, meldung) -> KeyValue.pair(getPatIdFromMeldung(meldung), meldung),
+                  Grouped.with(Serdes.String(), new MeldungExportV3Serde()))
+              .aggregate(
+                  MeldungExportListV3::new,
+                  (key, meldung, aggregate) -> {
+                    aggregate.addElement(meldung);
+                    return retainLatestVersionOnly(aggregate);
+                  },
+                  (key, meldung, aggregate) -> {
+                    aggregate.removeElement(meldung);
+                    return retainLatestVersionOnly(aggregate);
+                  },
+                  Materialized.with(Serdes.String(), new MeldungExportListV3Serde()))
+              .toStream()
+              .mapValues(this::groupByTumorId);
+
+      if (writeGroupedObdsToKafkaConfig.enabled()) {
+        stream
+            .flatMapValues(this.getMeldungExportListToObdsListMapper())
+            .selectKey(
+                (key, obds) ->
+                    String.format(
+                        "%s-%s",
+                        obds.getMengePatient().getPatient().getFirst().getPatientID(),
+                        obds.getMengePatient()
+                            .getPatient()
+                            .getFirst()
+                            .getMengeMeldung()
+                            .getMeldung()
+                            .getFirst()
+                            .getTumorzuordnung()
+                            .getTumorID()))
+            .to(
+                writeGroupedObdsToKafkaConfig.topic(),
+                Produced.with(
+                    Serdes.String(),
+                    Serdes.serdeFrom(new Obdsv3Serializer(), new Obdsv3Deserializer())));
+      }
+
+      return stream
           .flatMapValues(this.getMeldungExportListToBundleListMapper())
           .filter((key, bundle) -> bundle != null)
           .selectKey((key, bundle) -> patientBundleKeySelector(bundle));
@@ -101,6 +134,37 @@ public class Obdsv3Processor extends ObdsToFhirMapper {
    */
   private MeldungExportListV3 retainLatestVersionOnly(MeldungExportListV3 meldungExportList) {
     return meldungExportList.stream()
+        // generally only for debugging, can be removed later
+        .map(
+            meldung -> {
+              if (meldung.getObds().getMengePatient().getPatient().size() > 1) {
+                throw new IllegalStateException(
+                    "Meldung contains more than one patient, actually: "
+                        + meldung.getObds().getMengePatient().getPatient().size());
+              }
+
+              if (meldung
+                      .getObds()
+                      .getMengePatient()
+                      .getPatient()
+                      .getFirst()
+                      .getMengeMeldung()
+                      .getMeldung()
+                      .size()
+                  > 1) {
+                throw new IllegalStateException(
+                    "Meldung contains more than one Meldung, actually: "
+                        + meldung
+                            .getObds()
+                            .getMengePatient()
+                            .getPatient()
+                            .getFirst()
+                            .getMengeMeldung()
+                            .getMeldung()
+                            .size());
+              }
+              return meldung;
+            })
         .collect(
             Collectors.groupingBy(
                 Obdsv3Processor::getReportingIdFromObds,
@@ -162,12 +226,16 @@ public class Obdsv3Processor extends ObdsToFhirMapper {
       getMeldungExportListToBundleListMapper() {
     return meldungGroupedByPatientIdAndTumorId -> {
       List<OBDS> tumorObds =
-          meldungGroupedByPatientIdAndTumorId.stream()
-              .map(this::processMeldungGroup)
-              .collect(Collectors.toList());
+          meldungGroupedByPatientIdAndTumorId.stream().map(this::processMeldungGroup).toList();
 
       return obdsToFhirBundleMapper.map(tumorObds);
     };
+  }
+
+  private ValueMapper<List<MeldungExportListV3>, List<OBDS>>
+      getMeldungExportListToObdsListMapper() {
+    return meldungGroupedByPatientIdAndTumorId ->
+        meldungGroupedByPatientIdAndTumorId.stream().map(this::processMeldungGroup).toList();
   }
 
   private OBDS processMeldungGroup(MeldungExportListV3 meldungsOfPatientAndTumor) {
@@ -229,7 +297,6 @@ public class Obdsv3Processor extends ObdsToFhirMapper {
    *
    * @param latestReportingByReportingDate input data source
    * @param obds target data opbject
-   * @return Patient last reported
    */
   protected static void setLatestReportedPatientData(
       OBDS latestReportingByReportingDate, OBDS obds) {
